force-app/main/default/objects/bpats__Purchase_Order__c/fields/bpats__Account__c.field-meta.xml
<CustomField>
    <fullName>bpats__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>