force-app/main/default/objects/bpats__Purchase_Order__c/fields/bpats__Amount_Consumed__c.field-meta.xml
<CustomField>
    <fullName>bpats__Amount_Consumed__c</fullName>
    <label>Amount Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>