force-app/main/default/objects/bpats__Purchase_Order__c/fields/bpats__PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>bpats__PO_Amount__c</fullName>
    <label>PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>