force-app/main/default/objects/bpats__Purchase_Order__c/fields/bpats__PO_Balance__c.field-meta.xml
<CustomField>
    <fullName>bpats__PO_Balance__c</fullName>
    <formula>bpats__PO_Amount__c -  bpats__Amount_Consumed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>